(fix) Eliminate chat overlap

--- a/public/styles/styles/_chat.scss
+++ b/public/styles/styles/_chat.scss
@@ -3,7 +3,7 @@
 
 div.chat-section {
   width: 100%;
-  margin: 10px;
+  margin: 0 10px 10px 10px;
   padding: 20px 20px 10px 20px;
   overflow: hidden;
   background-color: $offBlack;
